fix(style.css): Added z-index to navbar to keep on top of landing element

--- a/public/style.css
+++ b/public/style.css
@@ -166,6 +166,7 @@ a:hover {
     position: absolute;
     left: 0px;
     right: 0px;
+    z-index: 10;
 }
 
 .social-media {
